// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailedError can hide support links 1`] = `
<div
  className="detailed-error"
>
  <div
    className="detailed-error-icon"
  >
    <InlineSvg
      src="icon-circle-exclamation"
    />
  </div>
  <div
    className="detailed-error-content"
  >
    <h4>
      Error heading
    </h4>
    <div
      className="detailed-error-content-body"
    >
      <div>
        Message
      </div>
    </div>
    <div
      className="detailed-error-content-footer"
    >
      <div>
        <a
          className="btn btn-default"
          onClick={[Function]}
        >
          Retry
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailedError hides footer when no "Retry" and no support links 1`] = `
<div
  className="detailed-error"
>
  <div
    className="detailed-error-icon"
  >
    <InlineSvg
      src="icon-circle-exclamation"
    />
  </div>
  <div
    className="detailed-error-content"
  >
    <h4>
      Error heading
    </h4>
    <div
      className="detailed-error-content-body"
    >
      <div>
        Message
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailedError renders 1`] = `
<div
  className="detailed-error"
>
  <div
    className="detailed-error-icon"
  >
    <InlineSvg
      src="icon-circle-exclamation"
    />
  </div>
  <div
    className="detailed-error-content"
  >
    <h4>
      Error heading
    </h4>
    <div
      className="detailed-error-content-body"
    >
      <div>
        Message
      </div>
    </div>
    <div
      className="detailed-error-content-footer"
    >
      <div />
      <div
        className="detailed-error-support-links"
      >
        <a
          href="https://status.sentry.io/"
        >
          Service status
        </a>
        <a
          href="https://sentry.io/support/"
        >
          Contact support
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailedError renders with "Retry" button 1`] = `
<div
  className="detailed-error"
>
  <div
    className="detailed-error-icon"
  >
    <InlineSvg
      src="icon-circle-exclamation"
    />
  </div>
  <div
    className="detailed-error-content"
  >
    <h4>
      Error heading
    </h4>
    <div
      className="detailed-error-content-body"
    >
      <div>
        Message
      </div>
    </div>
    <div
      className="detailed-error-content-footer"
    >
      <div>
        <a
          className="btn btn-default"
          onClick={[Function]}
        >
          Retry
        </a>
      </div>
      <div
        className="detailed-error-support-links"
      >
        <a
          href="https://status.sentry.io/"
        >
          Service status
        </a>
        <a
          href="https://sentry.io/support/"
        >
          Contact support
        </a>
      </div>
    </div>
  </div>
</div>
`;
